@@ -901,7 +901,7 @@ public class GumgaGenericRepository<T, ID extends Serializable> extends SimpleJp
 //        }
         String sort = getOrderField(queryObject.getSortField(), queryObject.getSortDir());
         Boolean useDistinct = gQuery.getUseDistinct();
-        String query = useDistinct ? "select distinct" : "select" +" obj FROM ".concat(entityInformation.getEntityName()).concat(" obj");
+        String query = (useDistinct ? "select distinct" : "select")  + " obj FROM ".concat(entityInformation.getEntityName()).concat(" obj");
 
         String where = createWhere(gQuery);
 
@@ -978,7 +978,7 @@ public class GumgaGenericRepository<T, ID extends Serializable> extends SimpleJp
 
     private Query createQueryWithGQuery(GQuery gQuery) {
         Boolean useDistinct = gQuery.useDistinct();
-        String query = useDistinct ? "select distinct" : "select" + " obj FROM ".concat(entityInformation.getEntityName()).concat(" obj");
+        String query = (useDistinct ? "select distinct" : "select") + " obj FROM ".concat(entityInformation.getEntityName()).concat(" obj");
 
         String where = createWhere(gQuery);
 
@@ -987,7 +987,7 @@ public class GumgaGenericRepository<T, ID extends Serializable> extends SimpleJp
 
     private Query createQueryCountWithGQuery(GQuery gQuery) {
         Boolean useDistinct = gQuery.useDistinct();
-        String query = useDistinct ? "select distinct" : "select" + " count(obj) FROM ".concat(entityInformation.getEntityName()).concat(" obj");
+        String query = (useDistinct ? "select distinct" : "select") + " count(obj) FROM ".concat(entityInformation.getEntityName()).concat(" obj");
 
         String where = createWhere(gQuery);
         CriteriaBuilder criteriaBuilder = entityManager.getCriteriaBuilder();
